--- a/cards-app/package.json
+++ b/cards-app/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "clsx": "^1.2.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -25,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "build:sass": "node-sass src/styles/main.scss dist/styles/main.css"
   },
   "eslintConfig": {
     "extends": [
@@ -49,8 +52,12 @@
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
-    "node-sass": "^7.0.3"
+    "file-loader": "^6.2.0",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1"
   }
 }
