--- a/cards-app/.eslintrc.json
+++ b/cards-app/.eslintrc.json
@@ -8,7 +8,8 @@
     "eslint:recommended",
     "react-app",
     "react-app/jest",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
   ],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
@@ -22,7 +23,6 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "double"]
+    "react/react-in-jsx-scope": "off"
   }
 }
