--- a/cards-app/package.json
+++ b/cards-app/package.json
@@ -10,14 +10,17 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "clsx": "^1.2.1",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.3",
     "normalize.css": "^8.0.1",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -51,18 +54,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
-    "css-loader": "^6.7.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "file-loader": "^6.2.0",
-    "node-sass": "^7.0.3",
-    "prettier": "^2.8.6",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1"
+    "prettier": "^2.8.6"
   }
 }
